# coding_log_book

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md
2020-05-07-jeventprocessor-concept/: CMakeLists.txt  main.cpp
2020-05-07-jeventprocessor-mixin/: CMakeLists.txt  main.cpp
2020-05-07-understanding-ptr-to-member/: CMakeLists.txt  main.cpp
2020-05-13-jfactory-getas/: main.cpp
2020-05-20-remove-large-files-from-git/: .gitconfig  migrate_eicroot_1.sh  migrate_eicroot_2.sh  readme.md
2020-06-06-multifactory/: CMakeLists.txt  main.cpp
2020-07-28-protoecal-cosmics-tracking/: CMakeLists.txt  ProtoECalHit.h  ProtoECalTrack.h  ProtoECalTrackFactory.cc  ProtoECalTrackFactory.h  ProtoECalTrack_Factory.cc  ProtoECalTrack_Factory.h  TriggerDecision.h  TriggerDecision_Factory_Fast.cc  TriggerDecision_Factory_Fast.h  TriggerDecision_Factory_Slow.cc  TriggerDecision_Factory_Slow.h  main.cpp
